--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@
             --primary: #0f8f2e;
             --secondary: #e8a129;
             --accent: #FFD166;
+            --pink: #e373a1;
+            --blue: #24b3d7;
             --dark: #2A2D34;
             --light: #fcfbf7;
             --text: #333333;
-            --white: #fff9e6;
+            --white: #f5ebd9;
             --shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
 
@@ -22,6 +24,24 @@
             color: var(--text);
             background-color: var(--light);
             line-height: 1.6;
+        }
+
+        .linha-verde{
+            width: 100%;
+            height: 2px;
+            background-color: var(--primary);
+        }
+
+        #bordaAmarelo{
+            border: solid 2px var(--secondary);
+        }
+
+        #bordaVerde{
+            border: solid 2px var(--primary);
+        }
+
+        #bordaRosa{
+            border: solid 2px var(--pink);
         }
 
         h1, h2, h3, h4 {
@@ -276,7 +296,9 @@
             display: flex;
             justify-content: center;
             margin-bottom: 2rem;
-            flex-wrap: wrap;
+            width: 100%;
+            overflow-x: auto;
+            /* flex-wrap: wrap; */
         }
 
         .tab-btn {
@@ -561,13 +583,13 @@
                 font-size: 1rem;
             }
             
-            .cardapio-tabs {
+            /* .cardapio-tabs {
                 flex-direction: column;
                 align-items: center;
-            }
+            } */
             
-            .tab-btn {
+            /* .tab-btn {
                 width: 100%;
                 max-width: 250px;
-            }
+            } */
         }
