--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 /* ===== VARIÁVEIS DE CORES ===== */
         :root {
-            --primary: #0f8f2e;
-            --secondary: #e8a129;
-            --accent: #FFD166;
+            /* --primary: #0f8f2e;
+            --secondary: #e8a129; */
+            --primary: #e8a129;
+            --secondary: #0f8f2e;
+            --accent: #0f8f2e;
             --pink: #e373a1;
             --blue: #24b3d7;
             --dark: #2A2D34;
             --light: #fcfbf7;
             --text: #333333;
-            --white: #f5ebd9;
+            --white: #c9f5dc;
             --shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
 
@@ -32,8 +34,8 @@
             background-color: var(--primary);
         }
 
-        #bordaAmarelo{
-            border: solid 2px var(--secondary);
+        #bordaAzul{
+            border: solid 2px var(--blue);
         }
 
         #bordaVerde{
@@ -121,6 +123,7 @@
             font-size: 1.8rem;
             box-shadow: 0 4px 12px rgba(37, 211, 102, 0.4);
             animation: pulse 2s infinite;
+            color: white;
         }
 
         @keyframes pulse {
@@ -298,18 +301,21 @@
             margin-bottom: 2rem;
             width: 100%;
             overflow-x: auto;
+            padding-left: 40px;
             /* flex-wrap: wrap; */
         }
 
         .tab-btn {
-            background: var(--light);
+            background: var(--secondary);
             border: none;
             padding: 0.8rem 1.5rem;
             margin: 0 0.5rem 1rem;
             border-radius: 50px;
             cursor: pointer;
             font-weight: 500;
+            font-size: 14px;
             transition: all 0.3s;
+            color: white;
         }
 
         .tab-btn.active {
