--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@
         /* ===== HERO SECTION ===== */
         .hero {
             position: relative;
-            width: 100%;
+            min-width: 100%;
             height: 50vh; /* ou ajuste para 'auto' se quiser que acompanhe o conteúdo */
             overflow: hidden;
             display: flex;
@@ -197,7 +197,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
+            min-width: 100%;
             height: 100%;
             object-fit: cover;
             z-index: 0;
