--- a/style.css
+++ b/style.css
@@ -318,15 +318,19 @@
 
         .tab-btn {
             background: var(--secondary);
+            display: flex;
+            flex-wrap: nowrap;
             border: none;
             padding: 0.8rem 1.5rem;
             margin: 0 0.5rem 1rem;
             border-radius: 50px;
             cursor: pointer;
             font-weight: 500;
-            font-size: 14px;
             transition: all 0.3s;
             color: white;
+            gap: 10px;
+            justify-content: center;
+            align-items: center;
         }
 
         .tab-btn.active {
@@ -599,14 +603,4 @@
             .hero p {
                 font-size: 1rem;
             }
-            
-            /* .cardapio-tabs {
-                flex-direction: column;
-                align-items: center;
-            } */
-            
-            /* .tab-btn {
-                width: 100%;
-                max-width: 250px;
-            } */
         }
