--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@
             box-sizing: border-box;
         }
 
+        body, html {
+            overflow-x: hidden;
+        }
+
         body {
             font-family: 'Poppins', sans-serif;
             color: var(--text);
@@ -350,7 +354,7 @@
 
         .cardapio-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
             gap: 2rem;
         }
 
