--- a/style.css
+++ b/style.css
@@ -280,19 +280,35 @@
             background: var(--light);
         }
 
-        .barraquinhas-grid {
+        .barraquinhas-grid, .galeria-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
             gap: 2rem;
         }
 
-        .barraquinha-card {
+        .barraquinha-card{
             background: var(--white);
             border-radius: 10px;
             padding: 1.5rem;
             text-align: center;
             box-shadow: var(--shadow);
             transition: transform 0.3s;
+        }
+        
+        .galeria-card{
+            border-radius: 10px;
+            width: 100%;      /* ou largura desejada */
+            height: 400px;    /* ou qualquer altura fixa, flexível ou em % */
+            position: relative;
+            overflow: hidden;
+        }
+
+        .galeria-card img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;       /* Faz a imagem preencher a div */
+            object-position: center; /* Centraliza a imagem dentro da div */
+            display: block;
         }
 
         .barraquinha-card:hover {
