--- a/style.css
+++ b/style.css
@@ -132,9 +132,13 @@
 
         /* ===== HEADER ===== */
         header {
+            position: absolute;
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            right: 0px;
             background: var(--white);
             box-shadow: var(--shadow);
-            position: sticky;
             top: 0;
             z-index: 100;
         }
@@ -195,6 +199,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-top: 100px;
         }
 
         .hero img {
