--- a/style.css
+++ b/style.css
@@ -508,7 +508,7 @@
         footer {
             background: var(--dark);
             color: var(--white);
-            padding: 3rem 2rem;
+            padding: 3rem 2rem 1rem 2rem;
             text-align: center;
         }
 
