--- a/style.css
+++ b/style.css
@@ -333,13 +333,13 @@
 
         .cardapio-tabs {
             display: flex;
-            justify-content: center;
+            justify-content: start;
             margin-bottom: 2rem;
             width: 100%;
             overflow-x: auto;
             white-space: nowrap;     /* conteúdo em linha */
             scroll-behavior: smooth; /* opcional, para rolagem suave */
-            padding-left: 40px;
+            /* padding-left: 40px; */
             /* flex-wrap: wrap; */
         }
 
