--- a/style.css
+++ b/style.css
@@ -155,6 +155,10 @@
             align-items: center;
         }
 
+        .logo img{
+            width: 6rem;
+        }
+
         .logo h1 {
             font-size: 1.8rem;
             margin: 0;
@@ -199,7 +203,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-top: 100px;
+            margin-top: 78px;
         }
 
         .hero img {
@@ -591,7 +595,7 @@
             .nav-links {
                 display: none;
                 position: absolute;
-                top: 100px;
+                top: 78px;
                 left: 0;
                 width: 100%;
                 background: var(--white);
